refactor(US-01): replace Collectors.toList() with .toList() (Java 21) test(US-01): add 5 tests for getCountries() in CountryServiceTest
Co-Authored-By: Claude Sonnet 4.6 <noreply@anthropic.com>